--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/seppe85/ioBroker.eta-data"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0"
+    "@iobroker/adapter-core": "^2.4.0",
+    "axios": "^0.21.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@iobroker/testing": "^2.4.1",
@@ -29,6 +31,7 @@
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.10",
     "@types/sinon-chai": "^3.2.5",
+    "@types/xml2js": "^0.4.7",
     "axios": "^0.21.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
